<resources>
    <string name="app_name">Gooder</string>
    <string name="activity_followed_user">People you follow</string>
    <string name="activity_profile">Profile</string>
    <string name="activity_recommended">Recommended Items</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_reverse_order">Reverse Order</string>
    <string name="action_unread_only">Unread Only</string>
    <string name="action_clear_notif">Clear Notification</string>
    <string name="action_by_me">By Me</string>
    <string name="action_by_me_and_followers">By Me And People I follow</string>
    <string name="action_by_anyone_on_my_post">By Me And Anyone On My Post</string>
    <string name="action_recommended_like_string">Most Liked Items</string>
    <string name="action_recommended_share_string">Most Reshared Items</string>
    <string name="action_recommended_comment_string">Most Commented Items</string>

    <string name="bottom_bar_home">Friends</string>
    <string name="bottom_bar_comment">Comments</string>
    <string name="bottom_bar_star">Stared</string>
    <string name="bottom_bar_notification">Notifications</string>

    <string name="people_you_follow">People You Follow</string>
    <string name="recommended_item">Recommended Items</string>
    <string name="bug_report">Send Bug Report</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log in</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="error_required_field">This field is required</string>
    <string name="wait_for_server_title">Connecting to server</string>
    <string name="wait_for_server_body">Fetching data from server</string>
    <string name="send_report">Send Report</string>
    <string name="bug_email_subject">Gooder bug</string>
    <string name="bug_email_context">Please say something about the bug.</string>
    <string name="storage_permission_rational">I Need permission to read and write sdcard to read your device log for debug</string>
    <string name="grant_permission">Give me the permission</string>
    <string name="crash_report">Crash Report</string>
    <string name="crash_email_subject">Gooder Crash</string>
    <string name="crash_email_context">Please say something about the crash</string>
    <string name="crash_report_text">Unfortunately the app getting crashed, Would you like to send a crash report?</string>
    <string name="ok">OK</string>
    <string name="re_share">Reshare</string>
    <string name="reshare_note">Reshare Note</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="disable_comment">Disable Comment on this post</string>
    <string name="disable_reshare">Disable Reshare Option for This Post</string>
    <string name="disable_draft">Don\'t publish this post (draft)</string>
    <string name="send">Send</string>
    <string name="add_post_title">Add New Post</string>
    <string name="required_field">This field is required</string>
    <string name="no_title">بدون عنوان</string>
    <string name="follow">+ Follow</string>
    <string name="unfollow">- UnFollow</string>
    <string name="user_followed">User Followed</string>
    <string name="user_unfollowed">User UnFollowed</string>
    <string name="can_not_do">Can not do this operation right now.</string>
    <string name="last_post">That\'s the last post</string>
    <string name="notification_post">Mentioned you in post</string>
    <string name="notification_comment">Mentioned you in Comment</string>
    <string name="notification_new_follower">Starts following you</string>
    <string name="notification_no">There is no new notification</string>
    <string name="can_not_find_post">Can not find post with id %s</string>
    <string name="notif_delete">Notification Deleted</string>
    <string name="notif_clear">Notifications Cleared</string>
    <string name="add_img_dialog_title">Add Image Link</string>
    <string name="add_link_dialog_title">Add Url</string>
    <string name="add_user_tag_dialog_title">Add user tag</string>
    <string name="add_post_tag_dialog_title">Add post tag</string>
    <string name="add_hash_tag_dialog_title">Add tag</string>
    <string name="add_img_et_hint">http://google.com/image.jpg</string>
    <string name="add_link_dialog_hint">http://google.com</string>
    <string name="add_user_tag_dialog_hint">user id, like: 14095</string>
    <string name="add_post_tag_dialog_hint">post id, like: 1235242</string>
    <string name="add_hash_tag_dialog_hint">tag, like: android</string>
    <string name="unread_count">%s Unread posts</string>
    <string name="not_logged_in">You are not logged in</string>

</resources>
