<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_friends_reverse_order"
        android:checkable="true"
        android:title="@string/action_reverse_order"
        app:actionViewClass="android.support.v7.widget.AppCompatCheckBox"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_friends_unread_only"
        android:checkable="true"
        android:title="@string/action_unread_only"
        app:actionViewClass="android.support.v7.widget.AppCompatCheckBox"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear_notification"
        android:title="@string/action_clear_notif"
        app:showAsAction="never"
        />

    <group
        android:id="@+id/comment_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_comment_by_me"
            android:title="@string/action_by_me"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_comment_by_me_and_followers"
            android:title="@string/action_by_me_and_followers"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_comment_by_anyone"
            android:title="@string/action_by_anyone_on_my_post"
            app:showAsAction="never"/>
    </group>

</menu>
