<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Mehdi Sohrabi
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/recommended_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_recommended_likes"
            android:title="@string/action_recommended_like_string"
            app:showAsAction="never"
            android:checked="true"/>

        <item
            android:id="@+id/action_recommended_reshare"
            android:title="@string/action_recommended_share_string"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_recommented_comment"
            android:title="@string/action_recommended_comment_string"
            app:showAsAction="never"/>
    </group>

</menu>